# Kafka-pyspark-delta-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
.github/workflows/: aws-deploy.yml  ci.yml
benchmark/: benchmark.py
deploy/aws/: COST_ESTIMATE.md  MONITORING.md  PRODUCTION_CHECKLIST.md  README.md  cloudwatch.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: PROFILE.md  architecture.md  benchmark.md
scripts/: generate_sample_data.py  run_streaming.ps1  run_streaming.sh
src/pipeline/: __init__.py  config.py  spark_session.py  streaming_job.py  transform.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_transform.py
