[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-pyspark-delta-pipeline"
version = "0.1.0"
description = "Production-Style Kafka PySpark Delta Pipeline — streaming data pipeline from Kafka to Delta Lake on Databricks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sasidhar Mopuru", email = "sasidharmopuru@gmail.com"},
]
keywords = ["kafka", "pyspark", "delta-lake", "databricks", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyspark>=3.5,<3.6",
    "delta-spark>=3.1,<3.2",
    "kafka-python>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.0",
    "flake8>=7.0",
]

[project.urls]
Homepage = "https://github.com/Sasireddy001/Kafka-pyspark-delta-pipeline"
Repository = "https://github.com/Sasireddy001/Kafka-pyspark-delta-pipeline"
Issues = "https://github.com/Sasireddy001/Kafka-pyspark-delta-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
